--- a/index-en.html
+++ b/index-en.html
@@ -366,16 +366,11 @@
                                                                                                                     <p class="hd">
                                                                                                                         &nbsp;Eligibility&nbsp;
                                                                                                                     </p>
-                                                                                                                    <p><strong>July 1 Onwards</strong>
-                                                                                                                    </p>
-                                                                                                                    <p>Both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
+                                                                                                                    <p>From <strong>July 1 onwards,</strong>both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
                                                                                                                     </p>
                                                                                                                     <p>&nbsp;</p>
-																													<p class="hd">
-                                                                                                                        <span>Nationals, spouses with the right of abode</span>
-                                                                                                                    </p>
-                                                                                                                    <p><strong>July 1 Onwards</strong></p>
-                                                                                                                    <p>Both eligible R.O.C. citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link one of their credit cards to the voucher program through this website. Those who spend for 
+																													
+                                                                                                                    <p>From <strong>July 1 onwards,</strong> both eligible R.O.C. citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link one of their credit cards to the voucher program through this website. Those who spend for 
                                                                                                                         <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st December 2020</strong> will be notified,
                                                                                                                         <strong>NT$2,000</strong> credit will be returned towards the linked credit cards from next monthly credit card bill.
@@ -397,15 +392,10 @@
                                                                                                                     <p class="hd">
                                                                                                                         &nbsp;Eligibility&nbsp;
                                                                                                                     </p>
-                                                                                                                    <p><strong>July 1 Onwards</strong></p>
-                                                                                                                    <p>Both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
+                                                                                                                    <p>From <strong>July 1 onwards,</strong>both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
                                                                                                                     </p>
-                                                                                                                    <p>&nbsp;</p>
-                                                                                                                    <p class="hd">
-                                                                                                                        <span>Nationals, spouses with the right of abode</span>
-                                                                                                                    </p>																											
-                                                                                                                    <p><strong>July 1 Onwards</strong></p>
-                                                                                                                    <p>Both eligible Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link a name-based card to the voucher program through this website. Those who spend for <strong>NT$3,000</strong> by
+                                                                                                                    <p>&nbsp;</p>																												
+                                                                                                                    <p>From <strong>July 1 onwards,</strong> both eligible Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link a name-based card to the voucher program through this website. Those who spend for <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st December 2020</strong> will be notified,
                                                                                                                         <strong> NT$2,000</strong> will be returned towards the linked stored valued cards.
                                                                                                                     </p>
@@ -435,15 +425,10 @@
                                                                                                                     <p class="hd">
                                                                                                                         &nbsp;Eligibility&nbsp;
                                                                                                                     </p>
-                                                                                                                    <p><strong>July 1 Onwards</strong></p>
-                                                                                                                    <p>Both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
+                                                                                                                    <p>From <strong>July 1 onwards,</strong>both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
                                                                                                                     </p>
                                                                                                                     <p>&nbsp;</p>
-                                                                                                                    <p class="hd">
-                                                                                                                        <span>Nationals, spouses with the right of abode</span>
-                                                                                                                    </p>
-                                                                                                                    <p><strong>July 1 Onwards</strong></p>
-                                                                                                                    <p>Both eligible R.O.C. citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link their preferred mobile payment app to the voucher program through this website. Those who spend for <strong>NT$3,000</strong> by
+																													<p>From <strong>July 1 onwards,</strong> both eligible R.O.C. citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link their preferred mobile payment app to the voucher program through this website. Those who spend for <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st December 2020</strong> will be notified,
                                                                                                                         <strong>NT$2,000</strong> will be returned towards the linked mobile payment app.
                                                                                                                     </p>
